--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:latest
-RUN apk add --update curl && rm -rf /var/cache/apk/*
+RUN apk add --update curl && apk add --update coreutils && rm -rf /var/cache/apk/*
 COPY entrypoint.sh /
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["curl"]
